2002-12-03  Chema Celorio  <chema@celorio.com>

	* moduleinfo.py: fix the libgnomeprint[ui] deps
	(gnome22): fix the 22 version too

2002-11-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* moduleinfo.py (gnome22): Add module for gnome-vfs HEAD,
	overriding gnome-vfs in the gnome20 module set.
	This means that gnome22 now uses gnome-vfs HEAD. It was using
	the gnome-vfs gnome-2-0 branch before.
	
2002-11-29  Murray Cumming  <murrayc@usa.net>

	* jhbuild.py: Commented-out the addpath() call that sets
	C_INCLUDE_PATH. We don't know why this was set. Maybe we will find out
	now. It seems to set the system directories, which leads to warnings
	with gcc 3.x.

2002-11-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* moduleinfo.py (gnome20): Fetch the gtkmm-2-0 branch of gtkmm2.
	(gnome22): Override the gtkmm2 module to use the HEAD branch.

2002-11-28  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py: dia-canvas requires pygtk.

2002-11-20  Murray Cumming  <murrayc@usa.net>

	* Applied patch in bug #97786, which makes gal depend on 
	libgnomeprintui.

2002-11-20  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py: gst-player requires gst-plugins, because it does a 
	pkg-config check for gstreamer-libs.

2002-11-19  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py: (gnome22): gnome-control-center: Added dependency on
	metacity, because it requires libmetacity-private.

Thu Nov  7 16:01:40 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py (gnome22): libgnomeprint/libgnomeprintui require
	HEAD for gnome22

2002-11-07  Ross Burton  <ross@burtonini.com>

	* moduleinfo.py: Change from orbit-python to gnome-python/pyorbit.

2002-11-02  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py: gnomemm/libgnomuimm requires gnomemm/libgnomecanvasmm
	and gnomemm/libglademm.

2002-11-01  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py: gnomemm/libgnomeuimm: Now depends on libbonobouimm,
	which needs the new orbitcpp module.
