@@ -1,3 +1,9 @@
+2002-12-05  Glynn Foster   <glynn.foster@sun.com>
+	
+	* moduleinfo.py: Fix up the bonobo stuff for proper branches. 
+	Change file-roller to get from cvs.gnome.org. Add gnome-utils 
+	to the 2.2 list.
+
 2002-12-03  Chema Celorio  <chema@celorio.com>
 
 	* moduleinfo.py: fix the libgnomeprint[ui] deps
